noinst_LTLIBRARIES = libsgmath.la

libsgmath_la_SOURCES = \
	SGBox.hxx \
	SGCMath.hxx \
	SGGeoc.hxx \
	SGGeod.hxx \
	SGGeodesy.cxx SGGeodesy.hxx \
	SGGeometry.hxx \
	SGGeometryFwd.hxx \
	SGIntersect.hxx \
	SGLimits.hxx \
	SGLineSegment.hxx \
	SGLocation.hxx \
	SGMath.hxx \
	SGMathFwd.hxx \
	SGMatrix.hxx \
	SGMisc.hxx \
	SGPlane.hxx \
	SGQuat.hxx \
	SGRay.hxx \
	SGSphere.hxx \
	SGTriangle.hxx \
	SGVec2.hxx \
	SGVec3.hxx \
	SGVec4.hxx \
	sg_geodesy.hxx \
	sg_random.c sg_random.h \
	sg_types.hxx

libsgmath_la_CPPFLAGS = -I$(top_srcdir)
